--- a/webai-proxy/package.json
+++ b/webai-proxy/package.json
@@ -1,14 +1,15 @@
 {
+  "name": "webai-proxy",
   "version": "1.0.0",
   "description": "Proxy server to WebAI LLM Node",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {},
   "dependencies": {},
   "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "packageManager": "yarn@4.6.0",
   "engines": {
     "node": ">=22.0.0"
