Coder proof of concept working, but disabled

--- a/coder/package.json
+++ b/coder/package.json
@@ -1,34 +1,59 @@
 {
   "version": "1.0.0",
-  "description": "API server for the Coder Agent",
+  "description": "",
   "main": "index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "scripts": {
-    "lint": "eslint . --fix",
-    "format": "prettier --write \"**/*.{ts,js.mjs,cjs,md}\"",
+    "lint": "eslint . --ext .ts,.js,.mjs,.cjs --ignore-pattern 'repos/**' --fix",
+    "lint:check": "eslint . --ext .ts,.js,.mjs,.cjs --ignore-pattern 'repos/**'",
+    "format": "prettier --write \"**/*.{ts,js,mjs,cjs,md,json}\" --ignore-path .prettierignore",
+    "format:check": "prettier --check \"**/*.{ts,js,mjs,cjs,md,json}\" --ignore-path .prettierignore",
+    "check": "yarn lint:check && npm run format:check",
+    "fix": "yarn lint && npm run format",
     "dev": "nodemon"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
+    "body-parser": "^1.20.2",
+    "chalk": "^5.3.0",
+    "codebuff": "^1.0.169",
+    "dotenv": "^16.4.5",
     "hono": "^4.6.14",
-    "http-proxy": "^1.18.1"
+    "http-proxy": "^1.18.1",
+    "lodash-es": "^4.17.21",
+    "node-fetch": "^3.3.2",
+    "node-schedule": "^2.1.1",
+    "simple-git": "^3.27.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "@hono/vite-dev-server": "^0.17.0",
+    "@types/eslint-plugin-jsx-a11y": "^6",
+    "@types/http-proxy": "^1.17.16",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.12.13",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.24",
-    "@typescript-eslint/parser": "8.0.0-alpha.24",
+    "@types/node-schedule": "^2.1.7",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "concurrently": "^9.1.2",
     "eslint": "^9.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.2.5",
     "rollup": "^4.30.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.23",
-    "tsx": "^4.19.3",
     "typescript": "^5.4.5",
     "vite": "^6.0.6",
     "vite-tsconfig-paths": "^5.0.1",
