--- a/webai-proxy/package.json
+++ b/webai-proxy/package.json
@@ -1,6 +1,6 @@
 {
   "version": "1.0.0",
-  "description": "API server for the Coder Agent",
+  "description": "WebAI Proxy Server",
   "main": "index.js",
   "keywords": [],
   "author": "",
