--- a/coder/package.json
+++ b/coder/package.json
@@ -1,6 +1,6 @@
 {
   "version": "1.0.0",
-  "description": "",
+  "description": "API server for the Coder Agent",
   "main": "index.js",
   "keywords": [],
   "author": "",
@@ -17,15 +17,11 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
-    "body-parser": "^1.20.2",
-    "chalk": "^5.3.0",
     "codebuff": "^1.0.169",
     "dotenv": "^16.4.5",
     "hono": "^4.6.14",
-    "http-proxy": "^1.18.1",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
-    "node-schedule": "^2.1.1",
     "simple-git": "^3.27.0",
     "uuid": "^10.0.0"
   },
