--- a/webai-proxy/package.json
+++ b/webai-proxy/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "lint": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,js.mjs,cjs,md}\"",
-    "dev": "nodemon"
+    "dev": "nodemon --watch src --exec \"node esbuild.js && node dist/server.js\"",
+    "build": "node esbuild.js",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
@@ -22,12 +24,14 @@
     "@types/node": "^20.12.13",
     "@typescript-eslint/eslint-plugin": "8.0.0-alpha.24",
     "@typescript-eslint/parser": "8.0.0-alpha.24",
+    "esbuild": "^0.25.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.2.5",
     "rollup": "^4.30.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.23",
+    "ts-node": "^10.9.1",
     "tsx": "^4.19.3",
     "typescript": "^5.4.5",
     "vite": "^6.0.6",
