make 401 error more clear

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "rm -rf dist && node esbuild.js",
     "start": "yarn build && node dist/server.js",
     "start:prod": "node dist/server.js",
-    "test": "vitest"
+    "test": "vitest --run --no-file-parallelism"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
