enhance error response messages

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ PROXY_PORT=8080
 # If no Authorization header is present, this TARGET_API_KEY will be sent to the backend
 # as the 'X-API-Key' header.
 # TARGET_API_KEY=
+
+# Optional: Timeout in milliseconds to wait for backend server response (default: 120000 = 2 minutes)
+TAR#ET_TIMEOUT_MS=120000
